<?xml version="1.0"?>
<package>
  <name>baxter_haptics</name>
  <version>1.0.0</version>
  <description>
    Kyle toying with haptic interactions, PyKDL, kdl_parser_py
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://www.rethinkrobotics.com/sdk</url>
  <url type="repository">
    https://github.com/RethinkRobotics/baxter
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/baxter/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdfdom</build_depend>
  <build_depend>python_orocos_kdl</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urdfdom</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>tf</run_depend>

</package>
