<?xml version="1.0"?>
<package>
  <name>baxter_pykdl</name>
  <version>0.1.0</version>
  <description>
    Kyle toying with PyKDL, kdl_parser_py
  </description>

  <maintainer email="kmaroney@rethinkrobotics.com">
    Kyle Maroney
  </maintainer>
  <license>BSD</license>
  <url type="website">http://sdk.rethinkrobotics.com/wiki</url>
  <url type="repository">
    https://github.com/rethink-kmaroney/baxter_pykdl
  </url>
  <url type="bugtracker">
    https://github.com/rethink-kmaroney/baxter_pykdl/issues
  </url>
  <author>Kyle Maroney</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdfdom</build_depend>
  <build_depend>python_orocos_kdl</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urdfdom</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>tf</run_depend>

</package>
